# FFMpeg_MJPEG-transcode-VP9_CXX_Universe

./: .gitignore  .gitmodules  README.md
FFMpeg_themself/: build_FFMpeg.sh
myExample/src/: CMakeLists.txt  CMakePresets.json  ffmpegInclude.h  main.cpp  mux.c  remux.c  transcode (with sws_scale).c  transcode.c
